# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/applications/jobPost/{jobPostID}": {
+        "/applications/jobPostByID/:jobPostID": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -48,6 +48,63 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.EnvelopeGetApplicationsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/applications/{applicationID}/progressStatus": {
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "applications"
+                ],
+                "summary": "Update application progress status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Application ID",
+                        "name": "applicationID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "enum": [
+                            "APPLIED",
+                            "INTERVIEWING",
+                            "REJECTED",
+                            "HIRED",
+                            "SHORTLISTED"
+                        ],
+                        "type": "string",
+                        "description": "Progress Status",
+                        "name": "progressStatus",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.EnvelopeUpdateApplicationResponse"
                         }
                     },
                     "400": {
@@ -706,10 +763,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.GetApplicationsResponse"
-                    }
+                    "$ref": "#/definitions/dto.GetApplicationsResponseWithMetaData"
                 },
                 "error": {
                     "$ref": "#/definitions/dto.ErrorResponse"
@@ -738,6 +792,17 @@
                 },
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.EnvelopeUpdateApplicationResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/dto.UpdateApplicationResponse"
+                },
+                "error": {
+                    "$ref": "#/definitions/dto.ErrorResponse"
                 }
             }
         },
@@ -822,6 +887,20 @@
                 }
             }
         },
+        "dto.GetApplicationsResponseWithMetaData": {
+            "type": "object",
+            "properties": {
+                "applications": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.GetApplicationsResponse"
+                    }
+                },
+                "meta_data": {
+                    "$ref": "#/definitions/dto.GetMetaDataApplicationsResponse"
+                }
+            }
+        },
         "dto.GetJobPostsResponse": {
             "type": "object",
             "properties": {
@@ -860,6 +939,29 @@
                 },
                 "user_id": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.GetMetaDataApplicationsResponse": {
+            "type": "object",
+            "properties": {
+                "applied_count": {
+                    "type": "integer"
+                },
+                "hired_count": {
+                    "type": "integer"
+                },
+                "interviewing_count": {
+                    "type": "integer"
+                },
+                "rejected_count": {
+                    "type": "integer"
+                },
+                "shortlisted_count": {
+                    "type": "integer"
+                },
+                "total_count": {
+                    "type": "integer"
                 }
             }
         },
@@ -938,6 +1040,17 @@
                 "total": {
                     "description": "pointer so we can omit when unknown",
                     "type": "integer"
+                }
+            }
+        },
+        "dto.UpdateApplicationResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "progress_status": {
+                    "type": "string"
                 }
             }
         },
